# recognition-app

./: README.md  pyproject.toml
app/: config.py  face_annotate.py  face_recognition.py  recognition_app.py
