[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["森谷光 <mhikaru.job@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
facenet-pytorch = "^2.5.2"
streamlit = "^1.10.0"
mmcv = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
